// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notifications > should render in xs 1`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group css-1tl8buz"
          data-testid="TableRow"
        >
          <td
            class="flex-col space-y-4 px-6 py-4"
            data-testid="NotificationTransactionItemMobile"
          >
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Address
              </div>
              <div
                class="min-[480px]:w-2/3 w-40 xs:w-50"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    DK1f5frUPTNqhFxoyDUHwN7VC2B4Uzhpmy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Amount
              </div>
              <div
                class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex h-full items-center space-x-1"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 20 DARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 2`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group css-1tl8buz"
          data-testid="TableRow"
        >
          <td
            class="flex-col space-y-4 px-6 py-4"
            data-testid="NotificationTransactionItemMobile"
          >
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Address
              </div>
              <div
                class="min-[480px]:w-2/3 w-40 xs:w-50"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    DK1f5frUPTNqhFxoyDUHwN7VC2B4Uzhpmy
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Amount
              </div>
              <div
                class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex h-full items-center space-x-1"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 20 DARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 3`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group relative css-1tl8buz"
          data-testid="TableRow"
        >
          <td
            class="w-2/5"
          >
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 ml-3 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 pl-8 static"
            >
              <div
                class="absolute bottom-0 left-4 top-0 flex items-center"
              >
                <div
                  class="h-2 w-2 rounded-full bg-theme-danger-400"
                />
              </div>
              <div
                class="absolute -bottom-px left-0 h-px w-8 bg-white dark:bg-theme-secondary-900"
              />
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 text-theme-secondary-700 dark:text-theme-secondary-500 font-semibold justify-end whitespace-nowrap"
            >
              <span
                data-testid="TimeAgo"
              >
                2 months ago
              </span>
            </div>
          </td>
          <td>
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-8 static"
            >
              <div
                class="h-5"
              >
                <div
                  class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      + 20 DARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute -bottom-px right-0 h-px w-8 bg-white dark:bg-theme-secondary-900"
                />
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 4`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group relative css-1tl8buz"
          data-testid="TableRow"
        >
          <td
            class="w-2/5"
          >
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 ml-3 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 pl-8 static"
            >
              <div
                class="absolute bottom-0 left-4 top-0 flex items-center"
              >
                <div
                  class="h-2 w-2 rounded-full bg-theme-danger-400"
                />
              </div>
              <div
                class="absolute -bottom-px left-0 h-px w-8 bg-white dark:bg-theme-secondary-900"
              />
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 text-theme-secondary-700 dark:text-theme-secondary-500 font-semibold justify-end whitespace-nowrap"
            >
              <span
                data-testid="TimeAgo"
              >
                2 months ago
              </span>
            </div>
          </td>
          <td>
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-8 static"
            >
              <div
                class="h-5"
              >
                <div
                  class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      + 20 DARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute -bottom-px right-0 h-px w-8 bg-white dark:bg-theme-secondary-900"
                />
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 5`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group relative css-1tl8buz"
          data-testid="TableRow"
        >
          <td
            class="w-2/5"
          >
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 ml-3 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 pl-8 static"
            >
              <div
                class="absolute bottom-0 left-4 top-0 flex items-center"
              >
                <div
                  class="h-2 w-2 rounded-full bg-theme-danger-400"
                />
              </div>
              <div
                class="absolute -bottom-px left-0 h-px w-8 bg-white dark:bg-theme-secondary-900"
              />
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 text-theme-secondary-700 dark:text-theme-secondary-500 font-semibold justify-end whitespace-nowrap"
            >
              <span
                data-testid="TimeAgo"
              >
                2 months ago
              </span>
            </div>
          </td>
          <td>
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-8 static"
            >
              <div
                class="h-5"
              >
                <div
                  class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      + 20 DARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute -bottom-px right-0 h-px w-8 bg-white dark:bg-theme-secondary-900"
                />
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render notification item 1`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group relative css-1tl8buz"
          data-testid="TableRow"
        >
          <td
            class="w-2/5"
          >
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 ml-3 rounded-l dark:group-hover:bg-black group-hover:bg-theme-secondary-200 pl-8 static"
            >
              <div
                class="absolute bottom-0 left-4 top-0 flex items-center"
              >
                <div
                  class="h-2 w-2 rounded-full bg-theme-danger-400"
                />
              </div>
              <div
                class="absolute -bottom-px left-0 h-px w-8 bg-white dark:bg-theme-secondary-900"
              />
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 text-theme-secondary-700 dark:text-theme-secondary-500 font-semibold justify-end whitespace-nowrap"
            >
              <span
                data-testid="TimeAgo"
              >
                2 months ago
              </span>
            </div>
          </td>
          <td>
            <div
              class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-black group-hover:bg-theme-secondary-200 justify-end pr-8 static"
            >
              <div
                class="h-5"
              >
                <div
                  class="font-semibold overflow-hidden bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      + 20 DARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute -bottom-px right-0 h-px w-8 bg-white dark:bg-theme-secondary-900"
                />
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;
